clusters/k3s/apps/apache/httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-static
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-static
  template:
    metadata:
      labels:
        app: httpd-static
    spec:
      containers:
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-static
  namespace: default
spec:
  type: NodePort
  selector:
    app: httpd-static
  ports:
    - port: 8082
      targetPort: 80
      nodePort: 30882
